--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
     <!-- add icon link for all standard browsers -->
 	
   <!-- FB Meta Tags -->
-  <meta property="og:url" content="https://sank0403.github.io/geordle/">
+  <meta property="og:url" content="https://theworldle.github.io/geordle/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="GEORDLE - Wordle for Countries and Capitals">
   <meta property="og:description" content="Guess the Country and Capital Pairing.">
-  <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/wallpaper.jpg"> -->
-  <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/mapiconlarge.jpg"> -->
-  <meta property="og:image" content="https://sank0403.github.io/geordle/mapicon.jpg">
+  <!-- <meta property="og:image" content="https://theworldle.github.io/geordle/wallpaper.jpg"> -->
+  <!-- <meta property="og:image" content="https://theworldle.github.io/geordle/mapiconlarge.jpg"> -->
+  <meta property="og:image" content="https://theworldle.github.io/geordle/mapicon.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:image" content="https://sank0403.github.io/geordle/wallpaper.jpg" />
+  <meta name="twitter:image" content="https://theworldle.github.io/geordle/wallpaper.jpg" />
   
-    <link rel = "icon" href = "https://sank0403.github.io/geordle/mapicon.jpg" 
+    <link rel = "icon" href = "https://theworldle.github.io/geordle/mapicon.jpg" 
             type = "image/x-icon">  
-	<link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		<!--for shortcut icons and transitions-->	
-	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="icon shortcut" sizes="3232" /> <!--follow same as indle - usually a smaller version-->
-	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
+	<link rel="manifest" href="https://theworldle.github.io/geordle/geordle_manifest.json" />		<!--for shortcut icons and transitions-->	
+	<link href="https://theworldle.github.io/geordle/mapicon.jpg" rel="icon shortcut" sizes="3232" /> <!--follow same as indle - usually a smaller version-->
+	<link href="https://theworldle.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
 </head>
 <body>
 	<button id="btnParty" type="button" hidden></button>
@@ -92,9 +92,9 @@
 		<span style="--i:17" id="daycount"></span>
 	</div>
 	<br>		
- 		<input type="button" id="" value="🌎 PRACTICE" onclick="window.open('https://sank0403.github.io/geordle/practice/','_self'); this.blur();" class="buttonrad">	
-		<input type="button" id="" value="🌎 CLASSIC" onclick="window.open('https://sank0403.github.io/geordle/classic/','_self'); this.blur();" class="buttonrad">	
-		<!-- <input type="button" value="❤️ GEORDLE️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank'); this.blur();" class="buttonrad">	 -->	
+ 		<input type="button" id="" value="🌎 PRACTICE" onclick="window.open('https://theworldle.github.io/geordle/practice/','_self'); this.blur();" class="buttonrad">	
+		<input type="button" id="" value="🌎 CLASSIC" onclick="window.open('https://theworldle.github.io/geordle/classic/','_self'); this.blur();" class="buttonrad">	
+		<!-- <input type="button" value="❤️ GEORDLE️" onclick="window.open('https://theworldle.com/','_blank'); this.blur();" class="buttonrad">	 -->	
 	<div class="modal" id="modal">
 		<div class="modal-header">
 			<div class="title"><strong>
@@ -110,7 +110,7 @@
 				<button data-close-button class="close-button">&times;</button>
 		</div>
 		<div class ="modal-body">
-		  GEORDLE is a spin-off on the popular <a href="https://www.nytimes.com/games/wordle/index.html"><b>WORDLE</b></a> game for Geography Lovers. 
+		  GEORDLE is a spin-off on the popular <a href="https://www.playwordle.uk"><b>WORDLE</b></a> game for Geography Lovers. 
 		  <br><br>
 		  Try to identify the COUNTRY and its CAPITAL using the letters on the Keyboard <b>ONE AT A TIME</b>. If the letter you selected is part of the COUNTRY or CAPITAL, the corresponding tiles will be highlighted in Green. 
 		  <br><br>
@@ -176,7 +176,7 @@
 			<br>
 			<div id="ffhdr"></div>
 			<div id="ffdtl"></div>
-			<p style="color:darkgray" align="justify" >If you enjoyed playing this game, you can show your support by <strong style='color: var(--green);' ><a href="https://www.buymeacoffee.com/sank0403" target="_"><u>Buying Us A Coffee</u></a></strong> ☕️, to help future development and upkeep of this game. <b>THANK YOU for playing GEORDLE! 🌎 </b><br><br></p>
+			<p style="color:darkgray" align="justify" >If you enjoyed playing this game, you can show your support by <strong style='color: var(--green);' ><a href="https://theworldle.com" target="_"><u>play more</u></a></strong> ☕️, to help future development and upkeep of this game. <b>THANK YOU for playing GEORDLE! 🌎 </b><br><br></p>
 			<div id="sdhdr">⭐ STAR DISTRIBUTION ⭐</div>
 			<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
 			<br>
@@ -184,14 +184,14 @@
 			<div class="button-row">
 				<!-- &nbsp; -->
 				<button id="HTMLButton" class="buttonrad1" title="Copy To Clipboard!" onclick="myFunction(); this.blur();">COPY STATS🔊</button>
-				<!-- <button id="FBButton" onclick="myFunction(); this.blur();"> <a href="https://www.facebook.com/groups/329553752723826/?ref=share" target="_blank"><img src="facebook2.png" height="30" alt="@Geordle on Facebook" title="@Geordle on Facebook"></a></button> -->
+				<!-- <button id="FBButton" onclick="myFunction(); this.blur();"> <a href="https://www.facebook.com/TheWorldle/?ref=share" target="_blank"><img src="facebook2.png" height="30" alt="@Geordle on Facebook" title="@Geordle on Facebook"></a></button> -->
 				<button id="FBButton" onclick="FBFunction(); this.blur();"> <img src="facebook2.png" height="30" alt="@Geordle on Facebook" title="@Geordle on Facebook"></button>
 				<button id="TwitterButton" onclick="TwitterFunction(); this.blur();"> <img src="twitter2.png" height="30" alt="@Geordle on Twitter" title="@Geordle on Twitter"></button>
 				<!-- <button id="WAButton" onclick="WAFunction(); this.blur();"> <img src="whatsapp.png" height="30" alt="@Geordle on Whatsapp" title="Share to Whatsapp"></button> -->
 				<!-- &nbsp; &nbsp; &nbsp; &nbsp; -->
 				<!-- <a href="https://www.buymeacoffee.com/sank0403/" target="_"><input type="button" class="buttonrad1" onclick="this.blur();"
 						id="CoffeButton" value="❤️GEORDLE" title="Buy Me A Coffee!" /><a>-->
-				<a href="https://sank0403.github.io/geordle/statssaver/"><input type="button" class="buttonrad1" onclick="this.blur();"
+				<a href="https://theworldle.github.io/geordle/statssaver/"><input type="button" class="buttonrad1" onclick="this.blur();"
 						id="CoffeButton" value="SAVE STATS📱" title="Save Stats to New Device!" /><a>
 			</div>
 		</div>
