--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div id="stats-item">
 			<span class="stats-item">
 				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:22px;height:22px;"></class>
-				<a href="mailto: geowordle@gmail.com" target="_"><img src="mail.png" style="width:22px;height:22px" alt ="EMAIL"></a>
+				<a href="mailto: contact@theworldle.com" target="_"><img src="mail.png" style="width:22px;height:22px" alt ="EMAIL"></a>
 			</span>	
 			<span class="stats-item">
 			    <a href="https://www.buymeacoffee.com/sank0403/" target="_"><img src="hearticon.png" style="width:22px;height:22px" alt ="Buy Me A Coffee"></a>
@@ -203,11 +203,11 @@
 			</div>
 			<div>
 				<div id="pzlhdr">Try a different puzzle</div>
-				<div id="pzl"><b><a href="https://tenizgame.github.io/" target="_">Play <u>TENIZ</u> 🎾 </a></b>
+				<div id="pzl"><b><a href="https://theworldle.com/flagle/" target="_">Play <u>Flagle</u> 🎾 </a></b>
 				</div>
 			</div>
 		</div>
-		<!-- <center><div class="email"><a href="mailto: geowordle@gmail.com">📧</a></div></center> -->
+		<!-- <center><div class="email"><a href="mailto: contact@theworldle.com">📧</a></div></center> -->
 		<br>
 	</div>
 	<div id="overlay"></div>
