--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
 <html lang="en">
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MEBRVZNPE4"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	  
-	  gtag('config', 'G-MEBRVZNPE4');
-	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 	<!-- <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script> -->
 	<!-- 	<script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
@@ -55,7 +46,7 @@
 				<a href="mailto: contact@theworldle.com" target="_"><img src="mail.png" style="width:22px;height:22px" alt ="EMAIL"></a>
 			</span>	
 			<span class="stats-item">
-			    <a href="https://www.buymeacoffee.com/sank0403/" target="_"><img src="hearticon.png" style="width:22px;height:22px" alt ="Buy Me A Coffee"></a>
+			    <a href="https://theworldle.com/" target="_"><img src="hearticon.png" style="width:22px;height:22px" alt ="Buy Me A Coffee"></a>
 				<class data-summary-target="#summary" id="statsbutton"><img src="statsicon.png" style="width:27px;height:20px;"></class>
 			</span>			
 		</div>
