--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>GEORDLE - Wordle for Countries and Capitals</title>
+	<title>GEORDLE - Worldle for Countries and Capitals</title>
 	<link href="geordle.css" rel="stylesheet">
 	<script defer src="geordle.js"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -20,7 +20,7 @@
   <!-- FB Meta Tags -->
   <meta property="og:url" content="https://theworldle.github.io/geordle/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="GEORDLE - Wordle for Countries and Capitals">
+  <meta property="og:title" content="GEORDLE - Worldle for Countries and Capitals">
   <meta property="og:description" content="Guess the Country and Capital Pairing.">
   <!-- <meta property="og:image" content="https://theworldle.github.io/geordle/wallpaper.jpg"> -->
   <!-- <meta property="og:image" content="https://theworldle.github.io/geordle/mapiconlarge.jpg"> -->
@@ -101,7 +101,7 @@
 				<button data-close-button class="close-button">&times;</button>
 		</div>
 		<div class ="modal-body">
-		  GEORDLE is a spin-off on the popular <a href="https://www.playwordle.uk"><b>WORDLE</b></a> game for Geography Lovers. 
+		  GEORDLE is a spin-off on the popular <a href="https://theworldle.com"><b>WORLDLE</b></a> game for Geography Lovers. 
 		  <br><br>
 		  Try to identify the COUNTRY and its CAPITAL using the letters on the Keyboard <b>ONE AT A TIME</b>. If the letter you selected is part of the COUNTRY or CAPITAL, the corresponding tiles will be highlighted in Green. 
 		  <br><br>
