--- a/statssaver/index.html
+++ b/statssaver/index.html
@@ -2,6 +2,7 @@
 <head>
 
 	<meta charset="UTF-8">
+	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>GEORDLE - Stats Saver</title>
@@ -11,23 +12,23 @@
     <!-- add icon link for all standard browsers -->
 	
   <!-- FB Meta Tags -->
-  <meta property="og:url" content="https://sank0403.github.io/geordle/">
+  <meta property="og:url" content="https://theworldle.github.io/geordle/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="GEORDLE - Wordle for Countries and Capitals">
+  <meta property="og:title" content="GEORDLE - Worldle for Countries and Capitals">
   <meta property="og:description" content="Guess the Country and Capital Pairing.">
-  <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/wallpaper.jpg"> -->
-  <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/mapiconlarge.jpg"> -->
-  <meta property="og:image" content="https://sank0403.github.io/geordle/mapicon.jpg">
+  <!-- <meta property="og:image" content="https://theworldle.github.io/geordle/wallpaper.jpg"> -->
+  <!-- <meta property="og:image" content="https://theworldle.github.io/geordle/mapiconlarge.jpg"> -->
+  <meta property="og:image" content="https://theworldle.github.io/geordle/mapicon.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:image" content="https://sank0403.github.io/geordle/wallpaper.jpg" />
+  <meta name="twitter:image" content="https://theworldle.github.io/geordle/wallpaper.jpg" />
   
-    <link rel = "icon" href = "https://sank0403.github.io/geordle/mapicon.jpg" 
+    <link rel = "icon" href = "https://theworldle.github.io/geordle/mapicon.jpg" 
             type = "image/x-icon">  
-	<link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		<!--for shortcut icons and transitions-->	
-	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="icon shortcut" sizes="3232" /> <!--follow same as indle - usually a smaller version-->
-	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
+	<link rel="manifest" href="https://theworldle.github.io/geordle/geordle_manifest.json" />		<!--for shortcut icons and transitions-->	
+	<link href="https://theworldle.github.io/geordle/mapicon.jpg" rel="icon shortcut" sizes="3232" /> <!--follow same as indle - usually a smaller version-->
+	<link href="https://theworldle.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
 </head>
 <body>
 		
@@ -60,9 +61,9 @@
 	<br>	
 <div class="summary-item">	
  		(TRANSFER YOUR STATS TO ANOTHER DEVICE)
-		<!--<input type="button" id="" value="🌎 PRACTICE" onclick="window.open('https://sank0403.github.io/geordle/practice/','_self'); this.blur();" class="buttonrad">	
-		<input type="button" id="" value="🌎 CLASSIC" onclick="window.open('https://sank0403.github.io/geordle/classic/','_self'); this.blur();" class="buttonrad">	
-		<input type="button" value="❤️ GEORDLE️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank'); this.blur();" class="buttonrad">	 -->	
+		<!--<input type="button" id="" value="🌎 PRACTICE" onclick="window.open('https://theworldle.github.io/geordle/practice/','_self'); this.blur();" class="buttonrad">	
+		<input type="button" id="" value="🌎 CLASSIC" onclick="window.open('https://theworldle.github.io/geordle/classic/','_self'); this.blur();" class="buttonrad">	
+		<input type="button" value="❤️ GEORDLE️" onclick="window.open('https://theworldle.com/','_blank'); this.blur();" class="buttonrad">	 -->	
     <hr>
 <br>
 ENTER YOUR STATS ON THE <t style="color: #6AAA64;"><u><b>NEW DEVICE</u></b></t> AND SUBMIT<br><br>
