--- a/practice/index.html
+++ b/practice/index.html
@@ -1,27 +1,19 @@
 <html lang="en">
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MEBRVZNPE4"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-	  
-	  gtag('config', 'G-MEBRVZNPE4');
-	</script>
 	<meta charset="UTF-8">
+	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Geordle Unlimited - Wordle for Countries and Capitals</title>
+	<title>Geordle Unlimited - Worldle for Countries and Capitals</title>
 	<link href="practice.css" rel="stylesheet">
 	<script defer src="practice.js"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <!-- add icon link for all standard browsers -->
-    <link rel = "icon" href = "https://sank0403.github.io/geordle/mapicon.jpg" 
+    <link rel = "icon" href = "https://theworldle.github.io/geordle/mapicon.jpg" 
             type = "image/x-icon">  
-	<link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		<!--for shortcut icons and transitions-->	
-	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="icon shortcut" sizes="3232" /> <!--follow same as indle - usually a smaller version-->
-	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
+	<link rel="manifest" href="https://theworldle.github.io/geordle/geordle_manifest.json" />		<!--for shortcut icons and transitions-->	
+	<link href="https://theworldle.github.io/geordle/mapicon.jpg" rel="icon shortcut" sizes="3232" /> <!--follow same as indle - usually a smaller version-->
+	<link href="https://theworldle.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
 </head>
 <body>
 	<div id="icons">
@@ -30,7 +22,7 @@
 				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:30px;height:30px;">
 			</span>	
 			<span class="icons-item">
-				<a href="https://sank0403.github.io/geordle/"><img src="clock.jpg" style="width:30px;height:30px" alt ="Daily Mode"></a>
+				<a href="https://theworldle.github.io/geordle/"><img src="clock.jpg" style="width:30px;height:30px" alt ="Daily Mode"></a>
 			</span>			
 		</div>
 	</div>
@@ -62,9 +54,9 @@
 		<span style="--i:13">e</span>
 	</div><br>
 	<!-- <button data-modal-target="#modal" class="buttonrad1">❓RULES</button>  -->
-	<!-- <input type="button" id="" value="🌎 DAILY" onclick="window.open('https://sank0403.github.io/geordle/' , '_self'); this.blur();" class="buttonrad1"> -->
-	<input type="button" id="" value="😊 CLASSIC" onclick="window.open('https://sank0403.github.io/geordle/classic' , '_self'); this.blur();" class="buttonrad">	
-	<input type="button" value="❤️ GEORDLE️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank'); this.blur();" class="buttonrad">		
+	<!-- <input type="button" id="" value="🌎 DAILY" onclick="window.open('https://theworldle.github.io/geordle/' , '_self'); this.blur();" class="buttonrad1"> -->
+	<input type="button" id="" value="😊 CLASSIC" onclick="window.open('https://theworldle.github.io/geordle/classic' , '_self'); this.blur();" class="buttonrad">	
+	<input type="button" value="❤️ GEORDLE️" onclick="window.open('https://theworldle.com/','_blank'); this.blur();" class="buttonrad">		
 	</center>	
 	<div class="modal" id="modal">
 		<div class="modal-header">
@@ -81,7 +73,7 @@
 				<button data-close-button class="close-button">&times;</button>
 		</div>
 		<div class ="modal-body">
-		  GEORDLE is a spin-off on the popular <a href="https://www.nytimes.com/games/wordle/index.html"><b>WORDLE</b></a> game for Geography Lovers. 
+		  GEORDLE is a spin-off on the popular <a href="https://theworldle.com"><b>WORLDLE</b></a> game for Geography Lovers. 
 		  <br><br>
 		  Try to identify the COUNTRY and its CAPITAL using the letters on the Keyboard <b>ONE AT A TIME</b>. If the letter you selected is part of the COUNTRY or CAPITAL, the corresponding tiles will be highlighted in Green. 
 		  <br><br>
@@ -121,7 +113,7 @@
 			The letter 'A' is in the 1st, 4th and 6th position of the Capital.
 			<br><br>			
 		  <center><b>Practice multiple times a day!<b></center>
-		  <div class="email"><a href="mailto: geowordle@gmail.com">📧</a></div>
+		  <div class="email"><a href="mailto: contact@theworldle.com">📧</a></div>
 		</div>		
 	</div>
 	<div id="overlay"></div>
